# CosineSampler

./: LICENSE  README.md  __init__.py  cosine_sampler.cpp  cosine_sampler_kernel.cu  grid_sample_temp.py  main.py  pyproject.toml  setup.py
3D/: cosine_sampler_3d.cpp  cosine_sampler_3d_kernel.cu  modules.py
CosineSampler/: __init__.py
CosineSampler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CosineSampler/cosine_sampler_2d/: __init__.py  cosine_sampler_2d.py  modules_2d.py
CosineSampler/cosine_sampler_3d/: __init__.py  cosine_sampler_3d.py  modules_3d.py
CosineSampler_2d/: __init__.py  cosine_sampler.cpp  cosine_sampler_2d.py  cosine_sampler_kernel.cu  grid_sampler.py  main.py
CosineSampler_3d/: __init__.py  cosine_sampler_3d_kernel.cu  grid_sampler.py  main.py
CosineSampler_3d/csrc/: cosine_sampler_3d.cpp
CosineSmapler/: __init__.py
CosineSmapler/CosineSampler_2d/: __init__.py
CosineSmapler/CosineSampler_3d/: __init__.py
CosineSmapler/csrc/: cosine_sampler_2d.cpp
cosine_sampler/cosine_sampler_2d/: __init__.py  modules_2d.py
cosine_sampler/cosine_sampler_2d/csrc/: cosine_sampler_2d_kernel.cu
cosine_sampler/cosine_sampler_3d/: __init__.py  cosine_sampler_3d.py  modules_3d.py
cosine_sampler/cosine_sampler_3d/csrc/: cosine_sampler_3d_kernel.cu
cosine_sampler_2d/: __init__.py  modules.py  modules_2d.py
cosine_sampler_3d/: __init__.py  modules.py  modules_3d.py
custom/: grid_2d_kernel_original.cu  grid_2d_original.cpp  grid_plz_original.py  grid_sample_temp.py
test/: test_2d.py  test_3d.py
